samples/_failures_safe/1761443593_8ed374_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d833fc1.c: In function ‘main’:
./samples/SAFE/__tmp_9d833fc1.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_9d833fc1.c:139:9: error: expected declaration or statement at end of input
